# robo-genesis-ai

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docusaurus.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project-index.md  render.yaml  requirements.txt  turbo.json
.claude/: AGENT-SKILL-UPDATE-CHECKLIST.md  (+1 more)
apps/backend/chatkit/: .gitignore  Dockerfile  alembic.ini  debug_db.py  pyproject.toml  run_server.py  test_openai_key.py  test_stream.py  upgrade_log.txt
apps/backend/chatkit/alembic/versions/: 002_book_structure.py  003_seed_book_data.py  004_chat_threads.py
apps/backend/chatkit/scripts/: index_lessons.py
apps/backend/chatkit/src/chatkit_backend/: __init__.py
apps/backend/chatkit/src/chatkit_backend/agents/: __init__.py  factory.py  tutor.py
apps/backend/chatkit/src/chatkit_backend/db/: database.py
apps/backend/chatkit/tests/: __init__.py  test_models.py
backend/: Dockerfile  README.md  check_models.py  docker-compose.yml  pyproject.toml  requirements.txt  verify.py
backend/app/: rag.py
backend/src/: config.py  database.py  llm.py  main.py
backend/src/api/: chat.py  health.py
backend/src/middleware/: rate_limit.py
backend/src/models/: message.py  retrieval.py  session.py  user.py
backend/src/schemas/: chat.py  health.py
backend/src/services/: chat_service.py  embedding_service.py  prompt_service.py  rag_service.py  vector_search_service.py
backend/src/vector_store/: qdrant_client.py
backend/tests/: test_full_book_qa.py  test_rag_service.py
(+413 files in other folders)
