[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.123.10",
    "openai>=2.9.0",
    "openai-agents>=0.6.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "sqlmodel>=0.0.24",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]
